--- a/assets/css/sass/components/_home-grid.scss
+++ b/assets/css/sass/components/_home-grid.scss
@@ -71,6 +71,7 @@ h1.page-title--custom {
 }
 
 .feature-content {
+
   &--grid {
     padding: 0px;
     &:hover {
@@ -80,6 +81,9 @@ h1.page-title--custom {
   }
 }
 .our_feature {
+  .grid-title {
+    text-align: center;
+  }
   .feature-icon {
     &.feature-image {
       width: 100%;
